--- a/src/components/NavigationBar/navigation.scss
+++ b/src/components/NavigationBar/navigation.scss
@@ -1,4 +1,5 @@
 .navigation-container {
+  position: fixed;
   width: 100%;
   padding-right: 15px;
   display: flex;
@@ -11,4 +12,10 @@
   font-size: 14px;
   align-items: center;
   color: white;
+  z-index: 1;
+  .right-side-navigation_navlink {
+    font-size: 1.4vw;
+    cursor: pointer;
+    border: 1px solid white;
+  }
 }
